--- a/index.html
+++ b/index.html
@@ -11,33 +11,29 @@
 <body>
   <!-- this is where all my webpage stuff should go-->
   <section id="container">
-
-    <!-- Name and description here-->
-    <div>
-      <p class="about"> 
-        Will Mianecki 
-
-
-        
-      </p> 
-    </div>
     
     <!-- links to my work -->
     <div id="exercises">
-      <h3>Exercises</h3>
-      <ul>
-        <li>EX 1 (This page is it)</a></li>
-        <li>EX 2 </a></li>
-      </ul> 
-    </div>
+      <h1>PENNY STAMPS <br> LECTURE SERIES</h1>
    
-    <div id="projects">
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div id="projects">
       <h3>Projects</h3>
       <ul>
         <li><a href="https://www.figma.com/proto/oI2A5Oro559KDPwzZ42FH8/Web-Type-Project-1?node-id=19%3A38&scaling=min-zoom" target="_blank">P1 Figma</a></li>
         <li><a href="#">P1 Website</a></li>
       </ul>
-    </div>
+    </div> -->
 
   </section>
 </body>
