--- a/index.html
+++ b/index.html
@@ -2,24 +2,77 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Will Mianeckis Web Type Class Site</title>
+  <title>Project 1 Web Type Mianecki</title>
   <!-- this is where my meta-info lives, but won’t show up on the page itself-->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- this is where all my webpage stuff should go-->
-  <section id="container">
-    
-    <!-- links to my work -->
-    <div id="exercises">
-      <h1>PENNY STAMPS <br> LECTURE SERIES</h1>
    
+  <div class="grid-container">
+
+    <div>    
+      <p class="sidenav">
+      THU, JAN 14<br>
+      WED, FEB 25<br>
+      WED, MAR 11<br>
+      THU, APR 11<br>
+      THU, APR 14<br>
+      THU, MAY 4
+      </p>
+    </div>
+
+    <div class="event-content">
+      <hr/> 
+      <h1>PENNY STAMPS <br> LECTURE SERIES</h1>
+      <h2>STAMPS SCHOOL OF ART<br>UNIVERSITY OF MICHIGAN</h2>
+      <hr/>
+      <p class="event">Carrie Mae Weems 
+        <br> 
+        <i>A History of Violence, Heave</i>
+      </p>
+      <hr/>
+      <p class="event">Hito Steyerl 
+        <br> 
+        <i>Bubble Vision</i>
+      </p>
+      <hr/>
+      <p class="event">Catherine Opie
+        <br> 
+        <i>In Person </i>
+      </p>
+      <hr/>
+      <p class="event">Nigel Poor
+        <br> 
+        <i>The San Quentin Project </i>
+      </p>
+      <hr/>
+      <p class="event">Emory Douglas
+        <br> 
+        <i>Designing Justice</i>
+      </p>
+      <hr/>
+      <p class="event">Morehshin Allahyari
+        <br> 
+        <i>On Digital Colonialism, Re-figuring, and Monstrosity</i>
+      </p>
+      <hr/>
+    </div>
+
+  </div>
 
 
+  <!-- site content -->
+  <section class="container">
+ 
+
+    <!-- links to my work -->
 
 
+<!-- <div>
+<p>ABOUT</p>
+</div> -->
 
 
 
