--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    
   <div class="grid-container">
 
+<!-- Date Sidebar -->
     <div>    
       <p class="sidenav">
       THU, JAN 14<br>
@@ -23,40 +24,24 @@
       </p>
     </div>
 
+<!-- Artist & Event Titles -->
     <div class="event-content">
-      <hr/> 
+    <hr/> 
       <h1>PENNY STAMPS <br> LECTURE SERIES</h1>
       <h2>STAMPS SCHOOL OF ART<br>UNIVERSITY OF MICHIGAN</h2>
-      <hr/>
-      <p class="event">Carrie Mae Weems 
-      <br> 
-      <i>A History of Violence, Heave</i>
+    <hr/>
+      <p class="event"> Carrie Mae Weems <span class="event-title"><br> A History of Violence, Heave </span></p>
+    <hr/>
+      <p class="event"> Hito Steyerl <span class="event-title"><br> Bubble Vision </span></p>
+    <hr/>
+      <p class="event"> Catherine Opie <span class="event-title"><br>In Person </span ></p>
+    <hr/>
+      <p class="event">Nigel Poor <span class="event-title"><br> San Quentin Project </span></p>
+    <hr/>
+      <p class="event">Emory Douglas <span class="event-title"> <br> Designing Justice</span >
       </p>
       <hr/>
-      <p class="event">Hito Steyerl 
-      <br> 
-      <i>Bubble Vision</i>
-      </p>
-      <hr/>
-      <p class="event">Catherine Opie
-        <br> 
-        <i>In Person </i>
-      </p>
-      <hr/>
-      <p class="event">Nigel Poor
-        <br> 
-        <i>The San Quentin Project </i>
-      </p>
-      <hr/>
-      <p class="event">Emory Douglas
-        <br> 
-        <i>Designing Justice</i>
-      </p>
-      <hr/>
-      <p class="event">Morehshin Allahyari
-        <br> 
-        <i>On Digital Colonialism, Re-figuring, and Monstrosity</i>
-      </p>
+      <p class="event">Morehshin Allahyari <span class="event-title"><br> On Digital Colonialism, Re-figuring, and Monstrosity </span> </p>
       <hr/>
     </div>
 
