--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <hr/>
       <p class="main">
         GROUND TRUTH<br>
-        <span class="subtitle"> A Collection of lectures on the politics of infrastructure, architecture, and geology</span>
+        <span class="subtitle"> A collection of lectures on the material politics of technology, infrastructure, and geology</span>
 
         <!-- <div class="box">
           <p>
@@ -60,23 +60,123 @@
 <div> 
 </div>
 
-<!-- Content 2 -->
+<!-- Content 1 -->
 <div class="event-1">
   <p class="speaker"> Kathryn Yusoff</p>
   <p class="event-title">Geo-Logics: Natural Resources as Necropolitics</p>
-  <p class="event-description">
-    This talk addresses how natural resources are the dominant and normative modality of matter, one that is predicated on and institutionalizes racialized relations. Two stratal relations deployed in the making of natural resources in the U.S. are addressed. First, the stratigraphic imagination of race in Louis Agassiz’s geographic race maps and portraits of the enslaved, alongside his scientific and political claims about polygenesis, plantations and the enduring legacy of racial difference. The second strata examines a convict lease prison mine in Birmingham, Alabama, which helped build the ‘Magic City’ and floated U.S. Steel on the stock exchange. This example of the carceral form of ‘natural resources’ and the undergrounding of black life during and after Reconstruction built the white surfaces of Modernity, enacting the stratigraphic imagination of racial difference as surface and mine. I consider both these accounts of materiality as affective infrastructures of White Geology that point to broader sites in the racializing geo-logics of natural resources and the decolonizing of matter. Within the talk I will address questions of material memory and redress, alongside the weaponization of geology through natural resources as an affectual architecture of racializing difference.
-  </p>
+  <div class="event-1-body" style="display: flex;">
+    <div class="event-details-1">
+      NOVEMBER 16, 2020 <br><br>
+      Harvard University<br>
+      Graduate School of Design<br>
+      <a href="https://www.gsd.harvard.edu/event/kathryn-yusoff-natural-resources-as-geologic-necropolitics/">Lecture Link</a> 
+
+
+    </div>
+    <div><p class="event-description-1">
+      This talk addresses how natural resources are the dominant and normative modality of matter, one that is predicated on and institutionalizes racialized relations. Two stratal relations deployed in the making of natural resources in the U.S. are addressed. First, the stratigraphic imagination of race in Louis Agassiz’s geographic race maps and portraits of the enslaved, alongside his scientific and political claims about polygenesis, plantations and the enduring legacy of racial difference. The second strata examines a convict lease prison mine in Birmingham, Alabama, which helped build the ‘Magic City’ and floated U.S. Steel on the stock exchange. This example of the carceral form of ‘natural resources’ and the undergrounding of black life during and after Reconstruction built the white surfaces of Modernity, enacting the stratigraphic imagination of racial difference as surface and mine. I consider both these accounts of materiality as affective infrastructures of White Geology that point to broader sites in the racializing geo-logics of natural resources and the decolonizing of matter. Within the talk I will address questions of material memory and redress, alongside the weaponization of geology through natural resources as an affectual architecture of racializing difference.
+    </p>
+    </div>
+    <div class="event-image-1">
+      <img src="images/Yusoff.jpg" alt="Yusoff" width="500" height="333">
+    </div>
+  </div>
 <hr/>
-<p class="speaker"> Sondra Perry </p>
-<p class="event-title">Typhoon Coming On </p>
+</div>
+
+<!-- This is a placeholder under the nav -->
+<div> 
+</div>
+
+
+<!-- Content 2 -->
+<div class="event-2">
+  <p class="speaker"> Sondra Perry</p>
+  <p class="event-title">Typhoon Coming On</p>
+  <div class="event-2-body" style="display: flex;">
+    <div class="event-details-2">
+      MARCH 6 — 2, 2018 <br><br>
+      Serpentine North Gallery<br>
+      <a href="https://www.gsd.harvard.edu/event/kathryn-yusoff-natural-resources-as-geologic-necropolitics/">Lecture Link</a> 
+
+
+    </div>
+    <div><p class="event-description-2">
+      Perry makes work about blackness, black femininity and African American heritage, often taking her personal history as a point of departure. Her use of digital tools and material, ranging from blue screen technology and 3D avatars to found footage from the internet, reflects on these modes of representation and the abstraction of black identity in art and media. Perry has said: “I’m interested in thinking about how blackness shifts, morphs, and embodies technology to combat oppression and surveillance throughout the diaspora. Blackness is agile.” <br><br>
+      This exhibition continued the Serpentine’s engagement with Perry’s practice, following her acclaimed performance for Park Nights 2016, where she shared a billing with the American poets Fred Moten and Eileen Myles. <br><br>
+      Perry is committed to net neutrality and ideas of collective production and action, using open source software to edit her work and leasing it digitally for use in galleries and classrooms, while also making all her videos available for free online. This principle of open access in Perry’s practice aims to privilege black life, to democratise access to art and culture, and to offer a critical platform that differentiates itself from the portrayal of blackness in the media. With viral imagery of black deaths in the US both sensationalised and the subject of widely disseminated memes, Perry wants to (re-)claim this digital space by foregrounding the use of technologies in her work.
+    </p>
+    </div>
+    <div class="event-image-2">
+      <img src="images/Perry.jpg" alt="Sondra Perry" width="500" height="333">
+    </div>
+  </div>
 <hr/>
-  <p class="speaker"> Eyal Weizman </p>
-  <p class="event-title">  Colonization as Climate Change </p>
+</div>
+
+<!-- This is a placeholder under the nav -->
+<div> 
+</div>
+
+<!-- Content 3 -->
+<div class="event-3">
+  <p class="speaker"> Eyal Weizman</p>
+  <p class="event-title">Conflict Shoreline: Colonization as Climate Change</p>
+  <div class="event-3-body" style="display: flex;">
+    <div class="event-details-3">
+      FEBRUARY 26, 2017 <br><br>
+      Sonic Acts Festival<br>
+      <a href="https://www.youtube.com/watch?v=omivukSotb4">Lecture Link</a> 
+
+
+    </div>
+    <div><p class="event-description-3">
+      Using historical aerial photographs, contemporary remote sensing data, state plans, court testimonies, and nineteenth-century travelers’ accounts, Eyal Weizman explores the threshold of the Negev desert. In the ongoing ‘battle over the Negev,’ (an Israeli state campaign to uproot Palestinian Bedouins from the northern border of the desert), the frontier is not demarcated by fences and walls but by shifting climatic conditions. The frontier is a ‘shoreline’ along which climate change and political conflict are deeply and dangerously entangled. <br> <br>
+
+      Eyal Weizman is an architect, Professor of Spatial and Visual Cultures, and Director of the Centre for Research Architecture at Goldsmiths, University of London. He is a founding member of the architectural collective DAAR in Beit Sahour/Palestine. His books include Mengele’s Skull (with Thomas Keenan at Sterenberg Press, 2012), Forensic Architecture (dOCUMENTA13 notebook, 2012), The Least of all Possible Evils (Nottetempo 2009, Verso 2011), Hollow Land (Verso, 2007), A Civilian Occupation (Verso, 2003), the series Territories 1,2 and 3, Yellow Rhythms and many articles in journals, magazines and edited books. He has worked with a variety of NGOs worldwide, and was a member of the B’Tselem board of directors. He lectured, curated and organised conferences in many institutions worldwide.
+    </p>
+    </div>
+    <div class="event-image-3">
+      <img src="images/Weizman.jpg" alt="Eyal Weizman" width="500" height="333">
+    </div>
+  </div>
 <hr/>
-<p class="speaker"> Ingrid Burrington </p> 
-<p class="event-title">  When We Look At The Land We Only See Our Own Faces </p>
+</div>
+
+<!-- This is a placeholder under the nav -->
+<div> 
+</div>
+
+<!-- Content 4 -->
+<div class="event-4">
+  <p class="speaker">Ingrid Burrington</p>
+  <p class="event-title">When We Look At The Land We Only See Our Own Faces</p>
+  <div class="event-4-body" style="display: flex;">
+    <div class="event-details-4">
+      FEBRUARY 26, 2017 <br><br>
+      Sonic Acts Festival<br>
+      <a href="https://www.youtube.com/watch?v=omivukSotb4">Lecture Link</a> 
+
+
+    </div>
+    <div><p class="event-description-4">
+      Ingrid Burrington writes, makes maps, and tells jokes about places, politics, and the feelings people have about both. She’s the author of Networks of New York An Illustrated Field Guide to Urban Internet Infrastructure. Her work has been supported by Eyebeam, Data & Society, and the Center for Land Use Interpretation. <br><br>
+      Code Ecologies is an open forum to explore the environmental impact of computation. This public event is organized by a group of faculty and alumni from the School for Poetic Computation who are passionate about environmental justice. Through presentations and discussions, we will explore the negative influence of computational technologies and network infrastructure on the natural environment, and the precarious conditions they create for the habitat we share among various species.
+    </p>
+    </div>
+    <div class="event-image-4">
+      <img src="images/Burrington.jpg" alt="Ingrid Burrington" width="500" height="333">
+    </div>
+  </div>
 <hr/>
+</div>
+
+<!-- This is a placeholder under the nav -->
+<div> 
+</div>
+
+<!-- Remaining Event Content -->
+<div class="events-tk"> 
 <p class="speaker"> Heather Davis </p>
 <p class="event-title">White Supremacy as an Ecological Formation</p>
   </p>
