--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
 </head>
 <body>
   <div class="grid-container">
@@ -15,11 +15,11 @@
 <!-- Date Sidebar -->
     <div>    
       
-      <p class="sidenav">Kathryn Yusoff</p><br>
+      <p class="sidenav">42.3770° N, 71.1167° W</p><br>
       <br>
-      <p class="sidenav">Sondra Perry</p>
+      <p class="sidenav">51.50466°N 0.17505°W</p>
       <br><br>
-      <p class="sidenav">Eyal Weizman</p>
+      <p class="sidenav">52.3712° N, 4.8939°E </p>
       <br><br>
       <p class="sidenav">ingrid burrington</p>
       <br><br>
@@ -37,17 +37,12 @@
         GROUND TRUTH<br>
         <span class="subtitle"> A collection of lectures on the material politics of technology, infrastructure, and geology</span>
 
-        <!-- <div class="box">
-          <p>
-            Move the mouse around in this box to watch its coordinates change.
-          </p>
+        <div class="box">
           <p>
             <code>pageX</code>: <span id="x">n/a</span>
-          </p>
-          <p>
             <code>pageY</code>: <span id="y">n/a</span>
           </p>
-        </div> -->
+        </div>
 
       </p>
     <hr/>
@@ -62,6 +57,7 @@
 
 <!-- Content 1 -->
 <div class="event-1">
+  <p class="coordinates">42.3770° N, 71.1167° W </p>
   <p class="speaker"> Kathryn Yusoff</p>
   <p class="event-title">Geo-Logics: Natural Resources as Necropolitics</p>
   <div class="event-1-body" style="display: flex;">
@@ -91,6 +87,7 @@
 
 <!-- Content 2 -->
 <div class="event-2">
+  <p class="coordinates">51.50466°N 0.17505°W</p>
   <p class="speaker"> Sondra Perry</p>
   <p class="event-title">Typhoon Coming On</p>
   <div class="event-2-body" style="display: flex;">
@@ -120,6 +117,7 @@
 
 <!-- Content 3 -->
 <div class="event-3">
+  <p class="coordinates">52.3712° N, 4.8939°E </p>
   <p class="speaker"> Eyal Weizman</p>
   <p class="event-title">Conflict Shoreline: Colonization as Climate Change</p>
   <div class="event-3-body" style="display: flex;">
@@ -149,7 +147,8 @@
 
 <!-- Content 4 -->
 <div class="event-4">
-  <p class="speaker">Ingrid Burrington</p>
+  <p class="coordinates">42.3770° N, 71.1167° W </p>
+  <p class="speaker">Ingrid Burrington</p> 
   <p class="event-title">When We Look At The Land We Only See Our Own Faces</p>
   <div class="event-4-body" style="display: flex;">
     <div class="event-details-4">
@@ -177,10 +176,12 @@
 
 <!-- Remaining Event Content -->
 <div class="events-tk"> 
+<p class="coordinates">51.50466°N 0.17505°W</p>
 <p class="speaker"> Heather Davis </p>
 <p class="event-title">White Supremacy as an Ecological Formation</p>
   </p>
 <hr/>
+<p class="coordinates">51.50466°N 0.17505°W</p>
 <p class="speaker"> Everest Pipkin </p> 
 <p class="event-title">Fragment Ecology in Online Space </p>
   <hr/>
