--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p class="main">
         <br>GROUND  <br> <span class="liveCoordinates"> </span> <br>TRUTH  <br>
     <br> 
-        <p class="subtitle"> Atest collection of lectures on the material politics of technology, infrastructure, and geology</p>
+        <p class="subtitle"> A collection of lectures on the material politics of technology, infrastructure, and geology</p>
        
         
 
