--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
     </div>
     <div class="event-image-4">
       <img src="images/Burrington.jpg" alt="Ingrid Burrington" width="500" height="333">
+      <figcaption><br>Artist and Journalist Ingrid Burrington.</figcaption>
     </div>
   </div>
 <hr/>
