--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
     </div>
     <div class="event-image-4">
       <img src="images/Davis.jpg" alt="Ingrid Burrington" width="500" height="333">
+      <figcaption><br>Urusula Biemann, still from the video essay Deep Weather</figcaption>
     </div>
   </div>
 <hr/>
